[package]
name = "fuse-access-guard"
version = "0.1.0"
edition = "2021"
description = "FUSE-based file access restriction wrapper for commands"

[dependencies]
clap = { version = "4", features = ["derive"] }
fuser = "0.15"
glob = "0.3"
nix = { version = "0.29", features = ["mount", "sched", "signal", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
